frontend/shared/scss/components/inputs.scss
@use '../base/variables' as *;
@use '../base/text-styles';

.input-spacing {
    max-width: 340px;

    @media (max-width: 500px) {
        max-width: none;
    }
}

.textarea-overlay {
    position: relative;

    > span {
        position: absolute;
        right: 10px;
        bottom: 5px;
        pointer-events: none;
        user-select: none;
        white-space: nowrap;
        @extend .style-input;
        color: $color-dark;
        opacity: 0.5;
    }
}

.input {
    @extend .style-input;
    @extend .style-input-box;
    color: $color-dark;

    padding: 6px 15px;
    text-align: left;
    height: $input-height;
    line-height: calc(#{$input-height} - 10px - 2 * #{$border-width});
    margin: 0;
    width: 100%;
    box-sizing: border-box;
    display: block;
    outline: none;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    word-break: normal;


    // On iOS, the time is centered on inputs, this is not what we want
    &::-webkit-date-and-time-value {
        text-align: left;
    }

    &.selectable {
        touch-action: manipulation;
        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
        user-select: none;
        cursor: pointer;
    }

    &:not(textarea) {
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
    }

    @keyframes blink_input_opacity_to_prevent_scrolling_when_focus {
        0% {
            opacity: 0;
        }

        100% {
            opacity: 1;
        }
    }

    // This fixes scrolling the input on iOS when focusing, which fixes glitches on iOS that scrolls the body when that is not allowed
    body.web-iOS &:focus {
        animation: blink_input_opacity_to_prevent_scrolling_when_focus 0.01s;
    }

    @media (hover: hover) {
        &:hover {
            border-color: $color-primary-gray-light;
        }
    }

    &:active {
        border-color: $color-primary-gray-light;
    }

    &.option {
        margin-top: 7px
    }

    &:disabled, &.disabled {
        color: $color-gray-1;
        cursor: not-allowed;

        // Safari fix color opacity
        -webkit-text-fill-color: $color-gray-1;
        opacity: 1; /* required on iOS */

        @media (hover: hover) {
            &:hover {
                border-color: $color-border;
            }
        }
    }

    &::placeholder {
        color: $color-gray-5;
        opacity: 1;
    }

    &.placeholder:not(:focus) {
        color: $color-gray-5;
        opacity: 1;
    }

    &.error {
        border-color: $color-error-border;
        box-shadow: 0 0 0 1px $color-error-border;

        &:focus,
        &:focus-within {
            border-color: $color-error-border-focus;
            box-shadow: 0 0 0 1px $color-error-border-focus;
        }
    }
}

.input-errors {
    .input {
        border-color: $color-error-border;
        box-shadow: 0 0 0 1px $color-error-border;

        &:focus,
        &:focus-within {
            border-color: $color-error-border-focus;
            box-shadow: 0 0 0 1px $color-error-border-focus;
        }
    }
}

.input-success {
    .input {
        border-color: $color-success-border;
        box-shadow: 0 0 0 1px $color-success-border;

        &:focus,
        &:focus-within {
            border-color: $color-success-border-focus;
            box-shadow: 0 0 0 1px $color-success-border-focus;
        }
    }
}

textarea.input {
    max-width: none;
    padding: 12px 15px;
    // 3 lines height
    line-height: calc(#{$input-height} - 18px - 2 * #{$border-width});
    height: calc(#{$input-height} + 4px + 10px + (#{$input-height} - 18px - 2 * #{$border-width}) * 4);

    resize: none;

    &.large {
        height: calc(#{$input-height} + 4px + 10px + (#{$input-height} - 18px - 2 * #{$border-width}) * 8);
    }

    &.small {
        height: calc(#{$input-height} + 4px + 10px + (#{$input-height} - 18px - 2 * #{$border-width}) * 3);
    }
}

select.input {
    cursor: pointer;

    // Remove dotted line in Firefox
    &:-moz-focusring {
        color: transparent;
        text-shadow: 0 0 0 #000;
    }

    option {
        color: $color-dark;
        background: $color-background;
    }
}

// Used to put multiple inputs next to each other
.input-group {
    display: flex;
    flex-direction: row;
    @extend .input-spacing;

    &.max {
        max-width: none;
    }

    & > * {
        flex-grow: 1;
        margin: 0 5px;

        &:first-child {
            margin-left: 0;
        }

        &:last-child {
            margin-right: 0;
        }

        .input {
            margin: 0;
        }
    }
}

.input-icon-container {
    position: relative;

    &.icon {
        display: block;
        width: auto;
        height: auto;
        overflow: visible;
        white-space: inherit;
    }

    &::before {
        position: absolute;
        top: 50%;
        transform: translate(0, -50%);
        pointer-events: none;
    }

    &:not(.right) {
        > * {
            padding-left: 43px;
        }

        &::before {
            left: 12px;
        }
    }
  
    &.right {
        > * {
            padding-right: 35px;
        }

        &::before {
            right: 10px;
        }

        &.no-padding {
            &::before {
                right: 0;
            }
        }
    }
}

.input-with-buttons {
    display: flex;
    flex-direction: row;
    align-items: center;

    > div:first-child {
        flex-grow: 1;
    }

    > div:last-child {
        padding-left: 10px;
        flex-shrink: 0;

        &:first-child {
            padding-left: 0;
        }
    }

    + .st-list {
        margin-top: 15px;
    }
}

.textarea-container {
    padding-bottom: 20px;
    padding-left: 35px;

    @media (max-width: 450px) {
        padding-left: 0;
    }
}

.list-input-box {
    display: flex;
    flex-direction: row;
    align-items: center;

    > span:first-child {
        color: $color-gray-1;
        flex-shrink: 0;
        min-width: 0;
    }

    > *:last-child {
        flex-grow: 1;
        min-width: 0;
    }
}

.list-input {
    @extend .style-input;
    color: $color-dark;
    padding: 15px;
    width: 100%;
    
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    word-break: break-all;

    &.dropdown {
        display: flex;
        flex-direction: row;
        align-items: center;
        
        cursor: pointer;
        touch-action: manipulation;
        user-select: none;
        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);

        &:active {
            opacity: 0.3;
        }

        > span {
            text-overflow: ellipsis;
            overflow: hidden;
            white-space: nowrap;
            min-width: 0;
        }

        > .icon {
            flex-shrink: 0;
        }
    }
}

.illustration-radio-container {
    display: grid;
    gap: 15px;

    // Default for when container queries are not supported
    grid-template-columns: 1fr 1fr 1fr;
    &:has(> :last-child:nth-child(2)) { /* 2 elements */
        grid-template-columns: 1fr 1fr;
    }

    @media (max-width: 350px) {
        // Default for when container queries are not supported
        grid-template-columns: 1fr 1fr;

       
    }

    @container st-view (min-width: 0px) {
        // Supports container queries
        grid-template-columns: 1fr;
    }

    @container st-view (min-width: 200px) {
        grid-template-columns: repeat(2, 1fr);
    }

    @container st-view (max-width: 376px) {
        gap: 10px;
    }

    @container st-view (min-width: 330px) {
        grid-template-columns: repeat(3, 1fr);

        &:has(> :last-child:nth-child(2)) { /* 2 elements */
            grid-template-columns: 1fr 1fr;
        }
    }

    &:has(p) {
        // Default for when container queries are not supported
        grid-template-columns: 1fr 1fr 1fr;

        &:has(> :last-child:nth-child(2)) { /* 2 elements */
            grid-template-columns: 1fr 1fr;
        }

        @media (max-width: 450px) {
            // Default for when container queries are not supported
            grid-template-columns: 1fr 1fr;
        }

        @container st-view (min-width: 0px) {
            // Supports container queries
            grid-template-columns: 1fr;
        }

        @container st-view (min-width: 350px) {
            grid-template-columns: repeat(2, 1fr);
        }

        @container st-view (min-width: 570px) {
            grid-template-columns: repeat(3, 1fr);

            &:has(> :last-child:nth-child(2)) { /* 2 elements */
                grid-template-columns: 1fr 1fr;
            }
        }
    }
}

.illustration-radio-box {
    border: $border-width solid $color-border-shade;
    background: $color-background;
    border-radius: 8px;
    @extend .style-input-shadow;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    aspect-ratio: 1 / 1;
    position: relative;
    gap: 5px;
    text-align: center;
    cursor: pointer;
    transition: transform 0.2s ease, border-color 0.2s ease, outline-color 0.2s ease;
    outline-offset: -0.1px;
    outline: 1.1px solid transparent;

    >div:first-child {
        position: absolute;
        right: 10px;
        top: 10px;
    }

    &:has(input:checked) {
        border-color: $color-primary;
        outline-color: $color-primary;
    }

    >h3 {
        @extend .style-label;
        padding: 0 10px;
    }

    >p {
        @extend .style-description-small;
        padding: 0 7px;
    }

    @container st-view (max-width: 570px) {
        img {
            width: 38px;
            height: 38px;
        }

        >h3 {
            font-size: 14px;
        }

        >p {
            font-size: 11px;
            padding: 0 5px;
        }
    }

    @media (max-width: 380px) {
        img {
            width: 32px;
            height: 32px;
        }
    }

    @media (hover: hover) {
        &:hover {
            border-color: $color-primary-gray-light;
            outline-color: $color-primary-gray-light;
        }
    }

    &:active {
        border-color: $color-primary-gray-light;
        outline-color: $color-primary-gray-light;
        transform: scale(0.96);
    }
}

